--- a/css/style.css
+++ b/css/style.css
@@ -1553,13 +1553,12 @@ ul.social-network li {
 .copyright {
 	text-align: left;
 	font-size: 12px;
+	color: #FFFFFF;
 }
 
 #sub-footer ul.social-network {
 	float: right;
 }
-
-
 
 /* scroll to top */
 .scrollup {
@@ -1568,9 +1567,7 @@ ul.social-network li {
 	height: 32px;
 	bottom: 0px;
 	right: 20px;
-
 	background: var(--main-bg-color);
-
 }
 
 a.scrollup {
@@ -1593,9 +1590,6 @@ a.scrollup i {
 a.scrollup i:hover {
 	text-decoration: none;
 }
-
-
-
 
 .absolute {
 	position: absolute;
@@ -1658,7 +1652,8 @@ article .align-right {
 	margin: 5px 0 15px 15px;
 }
 
-=============================*/ .clear-marginbot {
+/*=============================*/ 
+.clear-marginbot {
 	margin-bottom: 0;
 }
 
@@ -1709,6 +1704,10 @@ article .align-right {
 	padding: 10px 0px 0px;
 	background: transparent;
 	border: 0px;
+}
+
+.media-body p {
+	text-align: justify;
 }
 
 .media.service-box {
